2023-07-11T16:27:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5522479838 # 596
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-11
* notice: last 14d: unq all: 8 35
* notice: prev accum: outdated-unq outdated-all / unq all: 176 393 / 196 429
* notice: next accum: outdated-unq outdated-all / unq all: 176 393 / 196 430
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-06-27 2023-07-11]

2023-07-11T08:26:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5517588925 # 595
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-11
* notice: last 14d: unq all: 8 35
* notice: prev accum: outdated-unq outdated-all / unq all: 176 393 / 195 428
* notice: next accum: outdated-unq outdated-all / unq all: 176 393 / 196 429
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-06-27 2023-07-11]

2023-07-11T01:51:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5514899472 # 594
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-11
* notice: last 14d: unq all: 8 35
* notice: prev accum: outdated-unq outdated-all / unq all: 176 393 / 194 426
* notice: next accum: outdated-unq outdated-all / unq all: 176 393 / 195 428
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +6 +9 -0 -0 / 6 9
* notice: removed / changed dates: [] / [2023-07-10]

2023-07-10T16:28:45Z: