@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-11T16:27:09Z",
-  "count_outdated" : 393,
-  "uniques_outdated" : 176,
-  "count" : 430,
-  "uniques" : 196,
+  "timestamp" : "2023-07-12T01:59:11Z",
+  "count_outdated" : 396,
+  "uniques_outdated" : 177,
+  "count" : 431,
+  "uniques" : 197,
   "clones" : [
-    {
-      "timestamp": "2023-06-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-28T00:00:00Z",
       "count": 2,
@@ -100,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
