@@ -3,11 +3,6 @@
   "uniques": 8,
   "clones": [
     {
-      "timestamp": "2023-06-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-06-28T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -55,6 +50,11 @@
     {
       "timestamp": "2023-07-11T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-12T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
