@@ -1,3 +1,12 @@
+2023-07-12T01:59:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5526730450 # 597
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
+* notice: last 14d: unq all: 8 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 176 393 / 196 430
+* notice: next accum: outdated-unq outdated-all / unq all: 177 396 / 197 431
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-06-27] / [2023-07-12]
+
 2023-07-11T16:27:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5522479838 # 596
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-11
